Updated with corrections

--- a/LoanData.rmd
+++ b/LoanData.rmd
@@ -2,7 +2,8 @@ Loan Data from Prosper by Gvantsa Mchedlidze
 ========================================================
 
 
-Presented Loan Data from Prosper with last updated 03/11/2014. This data set contains 113,937 loans with 81 variables on each loan.
+Presented Loan Data from Prosper with last updated 03/11/2014. This data set
+contains 113,937 loans with 81 variables on each loan.
 ```{r echo=FALSE, message=FALSE, warning=FALSE, packages}
 # Load all of the packages that you end up using in your analysis in this code
 # chunk.
@@ -15,7 +16,7 @@ Presented Loan Data from Prosper with last updated 03/11/2014. This data set con
 # The other parameters for "message" and "warning" should also be set to FALSE
 # for other code chunks once you have verified that each plot comes out as you
 # want it to. This will clean up the flow of your report.
-
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 library(ggplot2)
 library(gridExtra)
 library(reshape2)
@@ -25,7 +26,7 @@ library(dplyr)
 
 ```{r echo=FALSE, Load_the_Data}
 # Load the Data
-LoanData <-read.csv('prosperLoanData.csv')
+LoanData <- read.csv('prosperLoanData.csv')
 ```
 ```{r echo=FALSE}
 # Wahat is in the Data
@@ -47,8 +48,9 @@ The length of the loan expressed in months.\
 summary(LoanData$Term)
 ```
 
-The current status of the loan: Cancelled,  Chargedoff, Completed, Current, Defaulted, FinalPaymentInProgress,
-PastDue. The PastDue status will be accompanied by a delinquency bucket.\
+The current status of the loan: Cancelled,  Chargedoff, Completed, Current,
+Defaulted, FinalPaymentInProgress, PastDue. The PastDue status will be 
+accompanied by a delinquency bucket.\
 
 ```{r echo=FALSE}
 
@@ -62,347 +64,484 @@ The employment status of the borrower at the time they posted the listing.\
 summary(LoanData$EmploymentStatus)
 ```
 
-The origination amount of the loan.\
+```{r echo=FALSE, warning=FALSE, univplotfunc}
+
+# creating univariate plots
+
+create_plot <- function(varname, binwidth = NULL, title= '', x_name ='') {
+  return(qplot( x = varname, binwidth = binwidth, main = title, xlab = x_name))
+}
+```
+
 
 ```{r echo=FALSE, warning=FALSE}
 
-qplot(data=LoanData, x=LoanOriginalAmount, binwidth =1000)
+create_plot(LoanData$LoanOriginalAmount , binwidth = 1000,
+            title = 'The origination amount of the loan', 
+            x_name = 'Loan Original Amount ($)')
 
 summary(LoanData$LoanOriginalAmount)
 ```
 
-> **Tip**: The most loans are below the 5000 but there are spikes  at 10000, 20000, 25000.\
+>*Note*: The most loans are below the 5000 but there are spikes  at 10000, 
+20000, 25000.\
 
-The Borrower's interest rate for this loan.\
+
+
 
 ```{r echo=FALSE, warning=FALSE}
 
-qplot(data=LoanData, x=BorrowerRate, binwidth =0.01)+
-      scale_x_continuous(limits = c(0, 0.4))
+create_plot(LoanData$BorrowerRate , binwidth = 0.01,
+            title = 'The Borrowers interest rate for this loan',
+            x_name = 'Borrower Rate') +
+  scale_x_continuous(limits = c(0, 0.4))
 
 summary(LoanData$BorrowerRate)
 ```
 
-The Lender yield on the loan. Lender yield is equal to the interest rate on the loan less the servicing fee.\
+Lender yield is equal to the interest rate on the loan less the servicing fee.\
 
 ```{r echo=FALSE, warning=FALSE}
 
-qplot(data=LoanData, x=LenderYield, binwidth =0.01)+
+create_plot(LoanData$LenderYield , binwidth = 0.01,
+            title = 'The Lender yield on the loan',
+            x_name = 'Lender Yield') +
   scale_x_continuous(limits = c(-0.01, 0.36))
 
 summary(LoanData$LenderYield)
 ```
 
-> **Tip**: Interest rate on the loan almost always less than the servicing fee.\
+>*Note*: Interest rate on the loan almost always less than the servicing fee.\
 
-Effective yield is equal to the borrower interest rate (i) minus the servicing fee rate, (ii) minus estimated
-uncollected interest on charge-offs, (iii) plus estimated collected late fees.  Applicable for loans originated after
-July 2009.\
+Effective yield is equal to the borrower interest rate (i) minus the servicing 
+fee rate, (ii) minus estimated uncollected interest on charge-offs, (iii) plus 
+estimated collected late fees.  Applicable for loans originated after July 2009.\
 
 ```{r echo=FALSE, warning=FALSE}
 
-qplot(data = subset(LoanData, !is.na(EstimatedEffectiveYield)), x=EstimatedEffectiveYield, binwidth =0.01)+
-  scale_x_continuous(limits = c(-0.05, 0.32))
+create_plot(LoanData$EstimatedEffectiveYield , binwidth = 0.01,
+            title = 'Effective yield',
+            x_name = 'Estimated Effective Yield') +
+    scale_x_continuous(limits = c(-0.05, 0.32))
 
 summary(LoanData$EstimatedEffectiveYield)
 ```
 
-Estimated loss is the estimated principal loss on charge-offs. Applicable for loans originated after July 2009.\
+Estimated loss is the estimated principal loss on charge-offs. 
+Applicable for loans originated after July 2009.\
 
 ```{r echo=FALSE, warning=FALSE}
 
-qplot(data = subset(LoanData, !is.na(EstimatedLoss)), x=EstimatedLoss, binwidth =0.01)+
+create_plot(LoanData$EstimatedLoss , binwidth = 0.01,
+            title = 'The Estimated loss',
+            x_name = 'Estimated Loss') +
   scale_x_continuous(limits = c(0, 0.36))
 
 summary(LoanData$EstimatedLoss)
 ```
 
-The estimated return assigned to the listing at the time it was created. Estimated return is the difference between
-the Estimated Effective Yield and the Estimated Loss Rate. Applicable for loans originated after July 2009.\
+The estimated return assigned to the listing at the time it was created. 
+Estimated return is the difference between the Estimated Effective Yield and the
+Estimated Loss Rate. Applicable for loans originated after July 2009.\
 
 ```{r echo=FALSE, warning=FALSE}
 
-qplot(data = subset(LoanData, !is.na(EstimatedReturn)), x=EstimatedReturn, binwidth =0.01)+
+create_plot(LoanData$EstimatedReturn , binwidth = 0.01,
+            title = 'The Estimated Return',
+            x_name = 'Estimated Return') +
   scale_x_continuous(limits = c(-0.05, 0.25))
 
 summary(LoanData$EstimatedReturn)
 ```
 
-> **Tip**: Mean of estimated Return is 0.96 and for estimated loss is 0.80.\
+>*Note*: Mean of estimated Return is 0.96 and for estimated loss is 0.80.\
 
 The income range of the borrower at the time the listing was created.\
 
 ```{r echo=FALSE, warning=FALSE}
 
-LoanData$IncomeRange <- ordered(LoanData$IncomeRange, levels = c("Not employed", "$0", "$1-24,999", "$25,000-49,999","$50,000-74,999", "$75,000-99,999", "$100,000+","Not displayed"))
+LoanData$IncomeRange <- ordered(LoanData$IncomeRange, 
+                                levels = c("Not employed", 
+                                           "$0", 
+                                           "$1-24,999", 
+                                           "$25,000-49,999",
+                                           "$50,000-74,999", 
+                                           "$75,000-99,999",
+                                           "$100,000+",
+                                           "Not displayed"))
 
-qplot(data=LoanData, x=IncomeRange)
+qplot(data = LoanData, x = IncomeRange,
+      main = 'The income range of the borrower',
+      xlab = 'Income Range ($)')
 
 ```
 
-> **Tip**: Borrowers income range peaks 25000$ - 74999$ only few are not employed or with 0$ income .\
-
-The scheduled monthly loan payment.\
+>*Note*: Borrowers income range peaks 25000$ - 74999$ only few are not employed
+or with 0$ income .\
 
 ```{r echo=FALSE, warning=FALSE}
-qplot(data=LoanData, x=MonthlyLoanPayment, binwidth =100)+
+
+create_plot(LoanData$MonthlyLoanPayment , binwidth = 100,
+            title = 'The scheduled monthly loan payment',
+            x_name = 'Monthly Loan Payment') +
   scale_x_continuous(limits = c(0, 1500))
 
 summary(LoanData$MonthlyLoanPayment)
 ```
 
-> **Tip**: Monthly payment amount is manly lass than 500$ but the plot has long tail in positive direction.\
+> *Note*: Monthly payment amount is manly lass than 500$ but the plot has long 
+tail in positive direction.\
 
-The quarter in which the loan was originated.\
 
 ```{r echo=FALSE, warning=FALSE}
 
-LoanData$year<-substring(LoanData$LoanOriginationQuarter,3,7)
-LoanData$Quarter<-substring(LoanData$LoanOriginationQuarter,0,2)
+LoanData$year <- substring(LoanData$LoanOriginationQuarter,3,7)
+LoanData$Quarter <- substring(LoanData$LoanOriginationQuarter,0,2)
 
-qplot(data=LoanData, x=Quarter)
+qplot(data = LoanData, x = Quarter,
+      main = 'The quarter in which the loan was originated')
 
 summary(LoanData$Quarter)
 
-qplot(data=LoanData, x=Quarter)+facet_wrap(~LoanData$year)
+qplot(data = LoanData, x = Quarter,
+      main = 'The quarter by year') +
+  facet_wrap(~LoanData$year)
 
 summary(LoanData$LoanOriginationQuarter)
 ```
-The date the loan was originated.\
 
 ```{r echo=FALSE, warning=FALSE}
 
-LoanData$year<-substring(LoanData$LoanOriginationDate,0,4)
-LoanData$Month<-substring(LoanData$LoanOriginationDate,6,7)
+LoanData$year <- substring(LoanData$LoanOriginationDate,0,4)
+LoanData$Month <- substring(LoanData$LoanOriginationDate,6,7)
 
-qplot(data=LoanData, x=Month)
+qplot(data = LoanData, x = Month,
+      main = 'The date the loan was originated')
 
 summary(LoanData$Month)
 
-qplot(data=LoanData, x=Month)+facet_wrap(~LoanData$year)
+qplot(data = LoanData, x = Month,
+      main = 'The date by year') +
+  facet_wrap(~LoanData$year)
 
 ```
 
-> **Tip**: Totally in Q4 is highest number of loans but while looking by year there is different picture. 2013 was the most active year. May be for 2005 and 2014 there we don't have full information. The information is chacked using variable LoanOriginationDate.\
-
-Number of months since the loan originated.\
+> *Note*: Totally in Q4 is highest number of loans but while looking by year 
+there is different picture. 2013 was the most active year. May be for 2005 and 
+2014 there we don't have full information. The information is chacked using 
+variable LoanOriginationDate.\
 
 ```{r echo=FALSE, warning=FALSE}
 
-qplot(data=LoanData, x=LoanMonthsSinceOrigination, binwidth =1)
-
+create_plot(LoanData$LoanMonthsSinceOrigination , binwidth = 1,
+            title = 'Number of months since the loan originated',
+            x_name = 'Loan Months Since Origination')
 summary(LoanData$LoanMonthsSinceOrigination)
 ```
-> **Tip**: The plot peaks around 6 month, other peak is near 24 month there is a gap between 55 and 65 month and other peak is at 69 month.\
+> *Note*: The plot peaks around 6 month, other peak is near 24 month there is a
+gap between 55 and 65 month and other peak is at 69 month.\
 
-Number of on time payments the borrower made on Prosper loans at the time they created this listing. This value will be null if the borrower had no prior loans.\
+Number of on time payments the borrower made on Prosper loans at the time they 
+created this listing. This value will be null if the borrower had no prior loans.\
 
 ```{r echo=FALSE, warning=FALSE}
 
-qplot(x = TotalProsperPaymentsBilled, data = subset(LoanData, !is.na(TotalProsperPaymentsBilled)), binwidth =1) +
+create_plot(LoanData$TotalProsperPaymentsBilled , binwidth = 1,
+            title = 'The total number of payments',
+            x_name = 'Total Prosper Payments Billed') +
   scale_x_continuous(limits = c(0, 141))
   
 summary(LoanData$TotalProsperPaymentsBilled)
 ```
 
-Number of on time payments the borrower had made on Prosper loans at the time they created this listing. This value will be null if the borrower has no prior loans.\
+Number of on time payments the borrower had made on Prosper loans at the time 
+they created this listing. This value will be null if the borrower has no prior 
+loans.\
 
 ```{r echo=FALSE, warning=FALSE}
 
-qplot(x = OnTimeProsperPayments, data = subset(LoanData, !is.na(OnTimeProsperPayments)), binwidth =1) +
+create_plot(LoanData$OnTimeProsperPayments , binwidth = 1,
+            title = 'The number of on time payments',
+            x_name = 'OnTime Prospe rPayments') +
   scale_x_continuous(limits = c(0, 141))
   
 summary(LoanData$OnTimeProsperPayments)
 ```
 
-> **Tip**: Total and ontime payments not differ much from each other.\
+> *Note*: Total and ontime payments not differ much from each other.\
 
 # Univariate Analysis
 
-This data set contains 113,937 loans with 81 variables on each loan, including loan amount, borrower rate\
-(or interest rate), current loan status, borrower income, borrower employment status and borrower credit history.\
-Income range, employment status and amount of credit relation are main interest.\
-Monthly payment amount and borrower's interest rate relaated variables.\
-I have created month, quarter, and year variables from date related variables.\
-I have orderd income range variables from low to high and didn't take into account NA values.\
+This data set contains 113,937 loans with 81 variables on each loan, including
+loan amount, borrower rate (or interest rate), current loan status, borrower 
+income, borrower employment status and borrower credit history. Income range, 
+employment status and amount of credit relation are main interest. Monthly 
+payment amount and borrower's interest rate relaated variables. I have created
+month, quarter, and year variables from date related variables. I have orderd 
+income range variables from low to high and didn't take into account NA values.\
+\ \ 
+
+
+
 
 # Bivariate Plots Section
 
-```{r echo=FALSE, warning=FALSE, Bivariate_Plots}
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, Bivariate_Plots}
 
 ggplot(aes(x = LoanOriginalAmount, y = MonthlyLoanPayment), 
-       data =subset(LoanData, !is.na(MonthlyLoanPayment)) )+
-  geom_point(alpha=0.1,position = position_jitter(h=0), color='red')+
+       data = subset(LoanData, !is.na(MonthlyLoanPayment))) +
+  labs(title = "Loan Original Amount vs Monthly Loan Payment") +
+  labs(x = "Loan Original Amount($)") +
+  labs(y = "Monthly Loan Payment($)") +
+  geom_point(alpha = 0.1, position = position_jitter(h = 0), color = 'red') +
   geom_smooth(method = 'lm')
 
-cor.test(LoanData$LoanOriginalAmount, LoanData$MonthlyLoanPayment, method='pearson')
+cor.test(LoanData$LoanOriginalAmount, LoanData$MonthlyLoanPayment,
+         method = 'pearson')
 ```
 
-> **Tip**: As expected Monthly payment increases when load increases, they are highly correlated.\
+> *Note*: As expected Monthly payment increases when load increases, they are highly correlated.\
 
-```{r echo=FALSE, warning=FALSE, Amountvsduration}
-?geom_smooth
+```{r echo=FALSE, message=FALSE, warning=FALSE, Amountvsduration}
+
 ggplot(aes(x = LoanOriginalAmount, y = LoanMonthsSinceOrigination), 
-       data =LoanData )+
-  geom_point(alpha=0.1,position = position_jitter(h=0), color='red')+
+       data = LoanData,) +
+  labs(title = "Loan Original Amount vs Loan Months Since Origination") +
+  labs(x = "Loan Original Amount($)") +
+  labs(y = "Loan Months Since Origination") +
+  geom_point(alpha = 0.1, position = position_jitter(h = 0), color = 'red') +
   geom_smooth()
 
-cor.test(LoanData$LoanOriginalAmount, LoanData$LoanMonthsSinceOrigination, method='pearson')
+cor.test(LoanData$LoanOriginalAmount, LoanData$LoanMonthsSinceOrigination,
+         method = 'pearson')
 ```
 
 
-```{r echo=FALSE, warning=FALSE, incomevsduration}
+```{r echo=FALSE, message=FALSE, warning=FALSE, incomevsduration}
 
 ggplot(aes(x = StatedMonthlyIncome, y = LoanMonthsSinceOrigination),
-       data = subset(LoanData, StatedMonthlyIncome<100000) )+
-  geom_point(alpha=0.1,position = position_jitter(h=0), color='red')+
+       data = subset(LoanData, StatedMonthlyIncome < 100000)) +
+  labs(title = "Stated Monthly Income vs Loan Months Since Origination") +
+  labs(x = "Stated Monthly Income($)") +
+  labs(y = "Loan Months Since Origination") +
+  geom_point(alpha = 0.1,position = position_jitter(h = 0), color = 'red') +
   geom_smooth()
 
-with (subset(LoanData, StatedMonthlyIncome<50000), cor.test(StatedMonthlyIncome, LoanMonthsSinceOrigination, method='pearson'))
+with(subset(LoanData, StatedMonthlyIncome < 50000), 
+     cor.test(StatedMonthlyIncome, LoanMonthsSinceOrigination,
+              method = 'pearson'))
 ```
-```{r echo=FALSE, warning=FALSE, amountvsincome}
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, amountvsincome}
 
 ggplot(aes(x = StatedMonthlyIncome, y = LoanOriginalAmount), 
-       data =subset(LoanData, StatedMonthlyIncome<100000) )+
-  geom_point(alpha=0.1,position = position_jitter(h=0), color='red')+
+       data = subset(LoanData, StatedMonthlyIncome < 100000)) +
+  labs(title = "Stated Monthly Income vs Loan Original Amount") +
+  labs(x = "Stated Monthly Income($)") +
+  labs(y = "Loan Original Amount($)") +
+  geom_point(alpha = 0.1,position = position_jitter(h = 0), color = 'red') +
   geom_smooth()
 
-with (subset(LoanData, StatedMonthlyIncome<50000), cor.test(StatedMonthlyIncome, LoanOriginalAmount, method='pearson'))
+with(subset(LoanData, StatedMonthlyIncome < 50000), 
+     cor.test(StatedMonthlyIncome, LoanOriginalAmount, 
+              method = 'pearson'))
 ```
-> **Tip**: Loan duration peaks for lower loan amount<2000 also low monthly incomes and strongly decreases until income reaches 10000. Duration also depending on amount. Loan amout increases with monthly income until income <28000. \
+> *Note*: Loan duration peaks for lower loan amount<2000 also low monthly 
+incomes and strongly decreases until income reaches 10000. Duration also 
+depending on amount. Loan amout increases with monthly income until income <28000. \
 
-```{r echo=FALSE, warning=FALSE, amountvsdelay}
+```{r echo=FALSE, message=FALSE, warning=FALSE, amountvsdelay}
 
-LoanData$ProsperPaymentsDelay = LoanData$ProsperPaymentsLessThanOneMonthLate+LoanData$ProsperPaymentsOneMonthPlusLate
+LoanData$ProsperPaymentsDelay = LoanData$ProsperPaymentsLessThanOneMonthLate + 
+                                LoanData$ProsperPaymentsOneMonthPlusLate
 
 ggplot(aes(x = LoanOriginalAmount, y = ProsperPaymentsDelay), 
-       data = subset(LoanData, ProsperPaymentsDelay> 0) )+
-  geom_point(alpha=1,position = position_jitter(h=0), color='red')+
+       data = subset(LoanData, ProsperPaymentsDelay > 0)) +
+  labs(title = "Loan Original Amount vs Prosper Payments Delay") +
+  labs(x = "Loan Original Amount($)") +
+  labs(y = "Prosper Payments Delay") +
+  geom_point(alpha = 0.1, position = position_jitter(h = 0), color = 'red') +
   geom_smooth()
 
-with (subset(LoanData, ProsperPaymentsDelay> 0), cor.test(ProsperPaymentsDelay, LoanOriginalAmount, method='pearson'))
+with(subset(LoanData, ProsperPaymentsDelay > 0), 
+      cor.test(ProsperPaymentsDelay, LoanOriginalAmount,
+               method = 'pearson'))
 ```
-```{r echo=FALSE, warning=FALSE, incomevsdelay}
 
-ggplot(aes(x = StatedMonthlyIncome, y =ProsperPaymentsDelay), 
-       data = subset(LoanData, ProsperPaymentsDelay> 0) )+
-  geom_point(alpha=1,position = position_jitter(h=0), color='red')+
+```{r echo=FALSE, message=FALSE, warning=FALSE, incomevsdelay}
+
+ggplot(aes(x = StatedMonthlyIncome, y = ProsperPaymentsDelay), 
+       data = subset(LoanData, ProsperPaymentsDelay > 0)) +
+  geom_point(alpha = 0.1, position = position_jitter(h = 0), color = 'red') +
+  labs(title = "Stated Monthly Income vs Prosper Payments Delay") +
+  labs(x = "Stated Monthly Income($)") +
+  labs(y = "Prosper Payments Delay") +
   geom_smooth()
 
-with (subset(LoanData, ProsperPaymentsDelay> 0), cor.test(ProsperPaymentsDelay, StatedMonthlyIncome, method='pearson'))
+with(subset(LoanData, ProsperPaymentsDelay > 0), 
+      cor.test(ProsperPaymentsDelay, StatedMonthlyIncome,
+               method = 'pearson'))
 ```
 
-> **Tip**: Loan delay is not depend loan amount. Delay is clustered for monthly income<20000.  \
+> *Note*: Loan delay is not depend loan amount. Delay is clustered for monthly income<20000.  \
 
-```{r echo=FALSE, warning=FALSE, amountvsEffectiveYield}
+```{r echo=FALSE, message=FALSE, warning=FALSE, amountvsEffectiveYield}
 
 ggplot(aes(x = LoanOriginalAmount, y = EstimatedEffectiveYield), 
-       data = subset(LoanData, !is.na(EstimatedEffectiveYield)))+
-  geom_point(alpha=1,position = position_jitter(h=0), color='red')+
+       data = subset(LoanData, !is.na(EstimatedEffectiveYield))) +
+  labs(title = "Loan Original Amount vs Estimated Effective Yield") +
+  labs(x = "Loan Original Amount($)") +
+  labs(y = "Estimated Effective Yield") +
+  geom_point(alpha = 0.05, position = position_jitter(h = 0), color = 'red') +
   geom_smooth()
 
-with (subset(LoanData, !is.na(EstimatedEffectiveYield)), cor.test(LoanOriginalAmount, EstimatedEffectiveYield, method='pearson'))
+with(subset(LoanData, !is.na(EstimatedEffectiveYield)), 
+      cor.test(LoanOriginalAmount, EstimatedEffectiveYield,
+               method = 'pearson'))
 ```
 
-> **Tip**: EstimatedEffectiveYield and loan amount dependence is visible loans <10000.\
+> *Note*: EstimatedEffectiveYield and loan amount dependence is visible loans <10000.\
 
-```{r echo=FALSE, warning=FALSE, AmountbyEstloss }
+```{r echo=FALSE, message=FALSE, warning=FALSE, AmountbyEstloss }
 
-Estloss_groups <- group_by(subset(LoanData, !is.na(EstimatedLoss)), EstimatedLoss)
+Estloss_groups <- group_by(subset(LoanData, !is.na(EstimatedLoss)),
+                           EstimatedLoss)
 
 Amount_by_loss <- summarise(Estloss_groups,
-                          Amount_means= mean(LoanOriginalAmount),
-                          Amount_count_median= median(LoanOriginalAmount),
-                          n=n())
+                          Amount_means = mean(LoanOriginalAmount),
+                          Amount_count_median = median(LoanOriginalAmount),
+                          n = n())
 
 Amount_by_loss <- arrange(Amount_by_loss, EstimatedLoss)
 
 ggplot(aes(x = EstimatedLoss, y = Amount_means), data = Amount_by_loss) +
-  geom_line(alpha=1, position = position_jitter(h=0) )#+
+  labs(title = "Estimated Loss vs mean of Loan Original Amount grouped") +
+  labs(x = "Estimated Loss") +
+  labs(y = "Loan Original Amount means ($)") +
+  geom_point(alpha = 1, position = position_jitter(h = 0) ) +
+  geom_smooth()
 ```
 
-```{r echo=FALSE, warning=FALSE, AmountbyEstreturn }
+```{r echo=FALSE, message=FALSE, warning=FALSE, AmountbyEstreturn }
 
-EstRet_groups <- group_by(subset(LoanData, !is.na(EstimatedReturn)), EstimatedReturn)
+EstRet_groups <- group_by(subset(LoanData, !is.na(EstimatedReturn)),
+                          EstimatedReturn)
 
 Amount_by_Ret <- summarise(EstRet_groups,
-                          Amount_means= mean(LoanOriginalAmount),
-                          Amount_count_median= median(LoanOriginalAmount),
-                          n=n())
+                          Amount_means = mean(LoanOriginalAmount),
+                          Amount_count_median = median(LoanOriginalAmount),
+                          n = n())
 
 Amount_by_Ret <- arrange(Amount_by_Ret, EstimatedReturn)
 
 ggplot(aes(x = EstimatedReturn, y = Amount_means), data = Amount_by_Ret) +
-  geom_point(alpha=1, position = position_jitter(h=0) )#+
+  labs(title = "Estimated Return vs mean of Loan Original Amount grouped") +
+  labs(x = "Estimated Return") +
+  labs(y = "Loan Original Amount means ($)") +
+  geom_point(alpha = 1, position = position_jitter(h = 0) )+
+  geom_smooth()
    
 ```
 
-> **Tip**: Loan Amount mean is more depend on EstimatedLoss than EstimatedReturn. Manly loss<0,1 is preferable for high amount of loans. Return manly vaies from 0 to 0.2\
+> *Note*: Loan Amount mean is more depend on EstimatedLoss than EstimatedReturn. Manly loss<0,1 is preferable for high amount of loans. Return manly vaies from 0 to 0.2\
 
 
 # Bivariate Analysis
 
 Amount of monly payment increasies proportionally as Loan amount increasies.\
-Loan duration decreasies with monthly income increases until it reaches 10000 than dependence dissapiars. \
-High loan amounts have estimated loss less than 0.1.\
-The most delay of payments is observed for incomes less than 10000.\
-LoanOriginalAmount vs MonthlyLoanPayment and OnTimeProsperPayments vs TotalProsperPayments have strongest dependence.\
+Loan duration decreasies with monthly income increases until it reaches 10000 
+than dependence dissapiars. High loan amounts have estimated loss less than 0.1.
+The most delay of payments is observed for incomes less than 10000. 
+LoanOriginalAmount vs MonthlyLoanPayment and OnTimeProsperPayments vs TotalProsperPayments
+have strongest dependence.\ \
+
 
 # Multivariate Plots Section
 
+```{r echo=FALSE, message=FALSE, warning=FALSE, delayvsincomerangevsyear}
 
-```{r echo=FALSE, delayvsincomerangevsyear}
-
-ggplot(aes(x = StatedMonthlyIncome, y =LoanOriginalAmount), 
-       data = subset(LoanData, StatedMonthlyIncome<20000) )+
+ggplot(aes(x = StatedMonthlyIncome, y = LoanOriginalAmount), 
+       data = subset(LoanData, StatedMonthlyIncome < 20000) ) +
+  labs(title = "Stated Monthly Income vs Loan Original Amount by year") +
+  labs(x = "Stated Monthly Income($)") +
+  labs(y = "Loan Original Amount($)") +
   geom_point(aes(color = year), stat = 'summary',  fun.y = mean)
 ```
 
-```{r echo=FALSE, delayvsincomerangevsyearfracmonth}
+```{r echo=FALSE, message=FALSE, warning=FALSE, delayvsincomerangevsyearfracmonth}
 
-ggplot(aes(x = StatedMonthlyIncome, y =LoanOriginalAmount), 
-       data = subset(LoanData, StatedMonthlyIncome<20000) )+
-  geom_point(aes(color = year), stat = 'summary',  fun.y = mean)+
+ggplot(aes(x = StatedMonthlyIncome, y = LoanOriginalAmount), 
+       data = subset(LoanData, StatedMonthlyIncome < 20000) ) +
+  labs(title = "Stated Monthly Income vs Loan Original Amount by year and month") +
+  labs(x = "Stated Monthly Income($)") +
+  labs(y = "Loan Original Amount($)") +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+  geom_point(aes(color = year), stat = 'summary',  fun.y = mean) +
   facet_wrap(~Month)
 ```
 
-> **Tip**: Loan amount increases  in 2013 and 2014 with monthly income >8000. Clearly seen that this began in april\ 2013 and lasts in first quarter of 2014. We have only first quarter information of 2014.\
+> *Note*: Loan amount increases  in 2013 and 2014 with monthly income >8000.
+Clearly seen that this began in april 2013 and lasts in first quarter of 2014.
+We have only first quarter information of 2014.\
 
-```{r echo=FALSE, incomevsdelayvsemplstatus}
+```{r echo=FALSE, message=FALSE, warning=FALSE, incomevsdelayvsemplstatus}
 
-ggplot(aes(x = IncomeRange,y =ProsperPaymentsDelay), 
-       data = subset(LoanData, ProsperPaymentsDelay> 0) )+
-  geom_point(aes(color = EmploymentStatus), stat = 'summary',  fun.y = mean)+
-  scale_color_brewer(type = 'qual')
+ggplot(aes(x = IncomeRange, y = ProsperPaymentsDelay), 
+       data = subset(LoanData, ProsperPaymentsDelay > 0)) +
+  labs(title = "Income Range vs Prosper Payments Delay by Employment Status") +
+  labs(x = "Income Range($)") +
+  labs(y = "Prosper Payments") +
+  geom_histogram(aes(fill = EmploymentStatus), 
+                 stat = 'summary',
+                 fun.y = mean,
+                 position = "dodge") +
+  theme_dark() +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+  scale_fill_brewer() 
 ```
-```{r echo=FALSE, Delayvsdurationvsmonth}
 
-ggplot(aes(x = LoanMonthsSinceOrigination,y =ProsperPaymentsDelay), 
-       data = subset(LoanData, ProsperPaymentsDelay> 0) )+
+```{r echo=FALSE, message=FALSE, warning=FALSE, Delayvsdurationvsmonth}
+
+ggplot(aes(x = LoanMonthsSinceOrigination,y = ProsperPaymentsDelay), 
+       data = subset(LoanData, ProsperPaymentsDelay > 0) ) +
+  labs(title = "Loan Months Since Origination vs Prosper Payments Delay by Month") +
+  labs(x = "Loan Months Since Origination") +
+  labs(y = "Prosper Payments") +
   geom_line(aes(color = Month), stat = 'summary',  fun.y = mean)
 ```
 
-```{r echo=FALSE, delayvslengthvsempstatsus}
+```{r echo=FALSE, message=FALSE, warning=FALSE, delayvslengthvsempstatsus}
 
-ggplot(aes(x = LoanMonthsSinceOrigination,y =ProsperPaymentsDelay), 
-       data = subset(LoanData, ProsperPaymentsDelay> 0) )+
-  geom_line(aes(color = EmploymentStatus), stat = 'summary',  fun.y = mean)+
+ggplot(aes(x = LoanMonthsSinceOrigination,y = ProsperPaymentsDelay), 
+       data = subset(LoanData, ProsperPaymentsDelay >  0) ) +
+  labs(title = "Loan Months Since Origination vs Prosper Payments Delay by Employment Status") +
+  labs(x = "Loan Months Since Origination") +
+  labs(y = "Prosper Payments") +
+  geom_line(aes(color = EmploymentStatus), stat = 'summary',  fun.y = mean) +
   scale_color_brewer(type = 'qual')
 ```
-```{r echo=FALSE, delayvslengthvsyear}
+```{r echo=FALSE, message=FALSE, warning=FALSE, delayvslengthvsyear}
 
-ggplot(aes( x = LoanMonthsSinceOrigination, y =ProsperPaymentsDelay), 
-       data = subset(LoanData, ProsperPaymentsDelay> 0) )+
-  geom_line(aes(color = year), stat = 'summary',  fun.y = mean)+
+ggplot(aes( x = LoanMonthsSinceOrigination, y = ProsperPaymentsDelay), 
+       data = subset(LoanData, ProsperPaymentsDelay > 0) )+
+  labs(title = "Loan Months Since Origination vs Prosper Payments Delay by Year") +
+  labs(x = "Loan Months Since Origination") +
+  labs(y = "Prosper Payments") +
+  geom_line(aes(color = year), stat = 'summary',  fun.y = mean) +
   scale_color_brewer(type = 'qual')
 ```
-> **Tip**: High rate of delays are observed in July 2007 with loan origination greater than 50 with employment status other and income range $2500-49999.\
+> *Note*: High rate of delays are observed in July 2007 with loan origination 
+greater than 50 with employment status other and income range $2500-49999.\
 
 
 # Multivariate Analysis
 
-High rate of delays are observed in July 2007 with loan origination grater than 50 with employment status other and income range $2500-49999.\
-Loan amount increasies in 2013 and 2014 with monthly income >8000. Clearely seen that this begin in april\ 2013 and lasts in first quarter of 2014. We have only first quarter information of 2014.\
+High rate of delays are observed in July 2007 with loan origination grater than
+50 with employment status other and income range $2500-49999. Loan amount 
+increasies in 2013 and 2014 with monthly income >8000. Clearely seen that this
+begin in april 2013 and lasts in first quarter of 2014. We have only first 
+quarter information of 2014.\
 
 
 ------
@@ -410,54 +549,81 @@ Loan amount increasies in 2013 and 2014 with monthly income >8000. Clearely seen
 # Final Plots and Summary
 
 ### Plot One
-```{r echo=FALSE, Plot_One}
+```{r echo=FALSE, message=FALSE, warning=FALSE, Plot_One}
 
-qplot(data=LoanData, x=LoanOriginalAmount, binwidth =1000)
+create_plot(LoanData$LoanOriginalAmount , binwidth = 1000,
+            title = 'The origination amount of the loan', 
+            x_name = 'Loan Original Amount ($)')
+
+summary(LoanData$LoanOriginalAmount)
 
 ```
 
 ### Description One
-Distribution of loan original amount.
+**Distribution of loan original amount in USD.**\
+The loan amount is distributed in range of (1000, 35000),
+the mean value is ~10000 but distribution is negatively skewed and most of
+loans are <5000. There are spikes at multiplicated numbers of 5000 until the max
+value. \ \
+
 
 ### Plot Two
-```{r echo=FALSE, Plot_Two}
-Estloss_groups <- group_by(subset(LoanData, !is.na(EstimatedLoss)), EstimatedLoss)
+```{r echo=FALSE, message=FALSE, warning=FALSE, Plot_Two}
+
+Estloss_groups <- group_by(subset(LoanData, !is.na(EstimatedLoss)),
+                           EstimatedLoss)
 
 Amount_by_loss <- summarise(Estloss_groups,
-                          Amount_means= mean(LoanOriginalAmount),
-                          Amount_count_median= median(LoanOriginalAmount),
-                          n=n())
+                          Amount_means = mean(LoanOriginalAmount),
+                          Amount_count_median = median(LoanOriginalAmount),
+                          n = n())
 
 Amount_by_loss <- arrange(Amount_by_loss, EstimatedLoss)
 
 ggplot(aes(x = EstimatedLoss, y = Amount_means), data = Amount_by_loss) +
-  geom_line(alpha=1, position = position_jitter(h=0) )
+  labs(title = "Estimated Loss vs mean of Loan Original Amount grouped") +
+  labs(x = "Estimated Loss") +
+  labs(y = "Loan Original Amount means ($)") +
+  geom_point(alpha = 1, position = position_jitter(h = 0) ) +
+  geom_smooth()
 ```
 
 ### Description Two
-The means of loan amount vs estimated loss
+**The means of loan amount in USD vs estimated loss.**\
+ The plot describes relation between loan amount and estimated loss. Its clearly seen that estimated loss is less than 0.1 for loans with high amount, also in case of estimated loss more than 0.1 mean loan amount is less than 5000$.\  
 
 ### Plot Three
-```{r echo=FALSE, Plot_Three}
+```{r echo=FALSE, message=FALSE, warning=FALSE, Plot_Three}
 
-ggplot(aes(x = StatedMonthlyIncome, y =LoanOriginalAmount), 
-       data = subset(LoanData, StatedMonthlyIncome<20000) )+
-  geom_point(aes(color = year), stat = 'summary',  fun.y = mean)+
+ggplot(aes(x = StatedMonthlyIncome, y = LoanOriginalAmount), 
+       data = subset(LoanData, StatedMonthlyIncome < 20000) ) +
+  labs(title = "Stated Monthly Income vs Loan Original Amount by year and month") +
+  labs(x = "Stated Monthly Income($)") +
+  labs(y = "Loan Original Amount($)") +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+  geom_point(aes(color = year), stat = 'summary',  fun.y = mean) +
   facet_wrap(~Month)
 ```
 
 ### Description Three
-Monthly income vs loan original amount in years and month.\
+**Monthly income vs loan original amount in years and month.**\
+
+Loan amount increases in 2013 and 2014 with monthly income >8000. Clearly seen 
+that this began in april 2013 and lasts in first quarter of 2014. We have only 
+first quarter information of 2014. Also in 2007 and 2008 (espacially in April, May)
+the number of lones in range (15000$, 25000$) is incrased for people with income less than 5000$.\ \
 ------
 
 # Reflection
-This data set contains 113,937 loans with 81 variables on each loan, including loan amount, borrower rate\
-(or interest rate), current loan status, borrower income, borrower employment status and borrower credit history.\
+This data set contains 113,937 loans with 81 variables on each loan, including loan amount, borrower rate
+(or interest rate), current loan status, borrower income, borrower employment status and borrower credit history.
 Analysed income range, employment status and amount of credit relation are main interest. Also delay of paiment,
 monthly payment amount and borrower's interest rate relaated variables. Manly dependences between variables are observed for loans less than 10000$.\
 
-Loan amount increasies in 2013 and 2014 with monthly income >8000. Clearely seen that this begin in april\ 2013 and lasts in first quarter of 2014. We have only first quarter information of 2014.\
-Loan Amount mean is more depend on EstimatedLoss than EstimatedReturn. Manly loss<0,1 is preferable for high amount of loans. Return manly vaies from 0 to 0.2.\
-High rate of delays are observed in July 2007 with loan origination grater than 50 with employment status other and income range $2500-49999.\
+Loan amount increasies in 2013 and 2014 with monthly income >8000. Clearely seen that this begin in April 2013 and lasts in first quarter of 2014. We have only first quarter information of 2014.
+Loan Amount mean is more depend on EstimatedLoss than EstimatedReturn. Manly loss<0.1 is preferable for high amount of loans. Return manly vaies from 0 to 0.2.
+High rate of delays are observed in July 2007 with loan origination grater than 50 with employment status other and income range $2500-49999. 
+
+Using full Loan data can be identified problematic customers also with picture of how is changing employment status and income or loan amount, could be used to describe global economic patterns.
 
 
